--- a/style.css
+++ b/style.css
@@ -34,14 +34,18 @@ body::-webkit-scrollbar-track {
 }
 
 #displayLabel {
+  display: block;
   background-color: #1b1b1b;
   margin-bottom: 15px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   border: 2px outset #2b2b2b;
   width: 27rem;
   height: 5rem;
   text-align: right;
   font-size: 32px;
-  color: #f5f5f5;
+  color: #f5f5ff;
 }
 
 .buttons {
